# DolpII

./: README.md
nfse-extractor/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  run.py
nfse-extractor/.codex/: config.toml
nfse-extractor/configs/: critical_fields.yaml  decision_thresholds.yaml  field_aliases.yaml  field_dictionary.yaml  field_patterns.yaml  runtime.yaml  scoring_rules.yaml
nfse-extractor/docs/: architecture.md  decision_rules.md  experiment_plan.md  field_dictionary.md  validation_rules.md
nfse-extractor/notebooks/: 00_environment_check.ipynb  01_dataset_intake.ipynb  02_tesseract_baseline.ipynb  03_dolphin_pipeline.ipynb  04_comparison.ipynb
nfse-extractor/scripts/: colab_bootstrap.sh  package_for_colab.sh
nfse-extractor/src/core/: __init__.py  experiment_runner.py  field_dictionary.py  interfaces.py  models.py
nfse-extractor/src/decision/: __init__.py  engine.py
nfse-extractor/src/engines/: __init__.py  dolphin_adapter.py  dolphin_runtime.py  tesseract_adapter.py
nfse-extractor/src/export/: __init__.py  bundle.py  manual_review.py  raw_artifacts.py
nfse-extractor/src/ingestion/: __init__.py  loader.py
nfse-extractor/src/normalization/: __init__.py  line_classifier.py  output_normalizer.py  raw_output.py
nfse-extractor/src/observability/: __init__.py  environment_report.py  pipeline_observer.py
nfse-extractor/src/preprocessing/: __init__.py  pdf.py  pipeline.py
nfse-extractor/src/resolver/: __init__.py  field_resolver.py
nfse-extractor/src/validation/: __init__.py  config_integrity.py  (+1 more)
(+210 files in other folders)
